syntax = "proto3";
package thorchain;

option go_package = "gitlab.com/thorchain/thornode/x/thorchain";

import "thorchain/v1/x/thorchain/types/type_pool.proto";
import "thorchain/v1/x/thorchain/types/type_chain_contract.proto";
import "thorchain/v1/x/thorchain/types/type_network_fee.proto";
import "thorchain/v1/x/thorchain/types/type_observed_network_fee.proto";
import "thorchain/v1/x/thorchain/types/type_errata_tx_voter.proto";
import "thorchain/v1/x/thorchain/types/msg_swap.proto";
import "thorchain/v1/x/thorchain/types/type_tss.proto";
import "thorchain/v1/x/thorchain/types/type_tss_keysign.proto";
import "thorchain/v1/x/thorchain/types/type_keygen.proto";
import "thorchain/v1/x/thorchain/types/type_network.proto";
import "thorchain/v1/x/thorchain/types/type_reserve_contributor.proto";
import "thorchain/v1/x/thorchain/types/type_vault.proto";
import "thorchain/v1/x/thorchain/types/type_ban_voter.proto";
import "thorchain/v1/x/thorchain/types/type_tx_out.proto";
import "thorchain/v1/x/thorchain/types/type_node_account.proto";
import "thorchain/v1/x/thorchain/types/type_observed_tx.proto";
import "thorchain/v1/x/thorchain/types/type_liquidity_provider.proto";
import "gogoproto/gogo.proto";

message GenesisState {
  repeated types.Pool pools = 1 [(gogoproto.nullable) = false];
  repeated types.LiquidityProvider liquidity_providers = 2 [(gogoproto.castrepeated) = "gitlab.com/thorchain/thornode/x/thorchain/types.LiquidityProviders", (gogoproto.nullable) = false];
  repeated types.ObservedTxVoter observed_tx_in_voters = 3 [(gogoproto.castrepeated) = "gitlab.com/thorchain/thornode/x/thorchain/types.ObservedTxVoters", (gogoproto.nullable) = false];
  repeated types.ObservedTxVoter observed_tx_out_voters = 4 [(gogoproto.castrepeated) = "gitlab.com/thorchain/thornode/x/thorchain/types.ObservedTxVoters", (gogoproto.nullable) = false];
  repeated types.TxOut tx_outs = 5 [(gogoproto.nullable) = false];
  repeated types.NodeAccount node_accounts = 6 [(gogoproto.castrepeated) = "gitlab.com/thorchain/thornode/x/thorchain/types.NodeAccounts", (gogoproto.nullable) = false];
  repeated types.Vault vaults = 7 [(gogoproto.castrepeated) = "gitlab.com/thorchain/thornode/x/thorchain/types.Vaults", (gogoproto.nullable) = false];
  uint64 reserve = 8;
  repeated types.BanVoter ban_voters = 9 [(gogoproto.nullable) = false];
  int64 last_signed_height = 10;
  map<string, int64> last_chain_heights = 11;
  repeated types.ReserveContributor reserve_contributors = 12 [(gogoproto.castrepeated) = "gitlab.com/thorchain/thornode/x/thorchain/types.ReserveContributors", (gogoproto.nullable) = false];
  types.Network network = 13 [(gogoproto.nullable) = false];
  repeated types.TssVoter tss_voters = 14 [(gogoproto.nullable) = false];
  repeated types.TssKeysignFailVoter tss_keysign_fail_voters = 15 [(gogoproto.nullable) = false];
  repeated types.KeygenBlock keygen_blocks = 16 [(gogoproto.nullable) = false];
  repeated types.ErrataTxVoter errata_tx_voters = 18 [(gogoproto.nullable) = false];
  repeated types.MsgSwap msg_swaps = 19 [(gogoproto.nullable) = false];
  repeated types.NetworkFee network_fees = 20 [(gogoproto.nullable) = false];
  repeated types.ObservedNetworkFeeVoter network_fee_voters = 21 [(gogoproto.nullable) = false];
  repeated types.ChainContract chain_contracts = 22 [(gogoproto.nullable) = false];
}
